--- a/payroll/guidance/contract.html
+++ b/payroll/guidance/contract.html
@@ -147,6 +147,10 @@ li><a href="after.html" class="hidden-xs hidden-sm">Understand the income tax, p
 </div>
 <h2>Answer a few questions for guidance on how to determine if a contract is valid</h2>
 <p>Contracts can be formed either orally or in writing. An oral contract is as valid and enforceable as a written contract.</p>
+<p>Learn more: </p>
+<ul class="cnjnctn-type-and cnjnctn-sm">
+	<li class="cnjnctn-col"><a href="#contract-null" aria-controls="contract-null" class="overlay-lnk" role="button">Who decides when a contract is null and void&nbsp;<span class="far fa-question-circle"></span></a> </li>
+   <li class="cnjnctn-col"><a href="#contract-stop" aria-controls="contract-stop" class="overlay-lnk" role="button">Examples of cessation of a contract&nbsp;<span class="far fa-question-circle"></span></a></li></ul>
 
 <p class="text-muted small">Make a selection and <strong> scroll down</strong> for further questions or results</p>
   <div id="interactive">
@@ -209,6 +213,7 @@ li><a href="after.html" class="hidden-xs hidden-sm">Understand the income tax, p
   <div id="ajax-q1-contract-no" class="hidden wb-frmvld gc-font-2019 alert alert-warning">
               <h3><small>Your result </small><br>
                 There are no offer and an acceptance of the terms and conditions of the agreement from the parties</h3>
+<hr>
 <h4>Indicator: Contract is not valid</h4>    
  <p>There must be an offer and an acceptance of the terms and conditions of the agreement from the parties to be considered a valid contract. If the contract is not valid, you need to carefully determine the actual relationship when making your determination.</p>       
             </div>
@@ -217,7 +222,7 @@ li><a href="after.html" class="hidden-xs hidden-sm">Understand the income tax, p
 <div id="ajax-q2-contract-no" class="hidden wb-frmvld gc-font-2019 alert alert-warning">
  <h3><small>Your result </small><br>
                 The parties involved are not legally capable of entering into a contract</h3>
-
+<hr>
 <h4>Indicator: Contract is not valid</h4>
 <p>The parties involved must be legally capable of entering into the contract to be considered a valid contract. If the contract is not valid, you need to carefully determine the actual relationship when making your determination.</p>
 </div>
@@ -225,7 +230,7 @@ li><a href="after.html" class="hidden-xs hidden-sm">Understand the income tax, p
 <div id="ajax-q3-contract-no" class="hidden wb-frmvld gc-font-2019 alert alert-warning">
  <h3><small>Your result </small><br>
                 The object of the contract is not legitimate</h3>
-
+<hr>
 <h4>Indicator: Contract is not valid</h4>
 <p>The object of the contract must be legitimate to be considered a valid contract. If the contract is not valid, you need to carefully determine the actual relationship when making your determination.</p>
 </div>
@@ -233,7 +238,7 @@ li><a href="after.html" class="hidden-xs hidden-sm">Understand the income tax, p
 <div id="ajax-q4-contract-no" class="hidden wb-frmvld gc-font-2019 alert alert-warning">
  <h3><small>Your result </small><br>
                The agreement is not mutual</h3>
-
+<hr>
 <h4>Indicator: Contract is not valid</h4>
 <p>The agreement must be mutual (for example, the parties must have the intention to enter into the contract and be bound by its terms) to be considered a valid contract. If the contract is not valid, you need to carefully determine the actual relationship when making your determination.</p>
 </div>
@@ -241,6 +246,7 @@ li><a href="after.html" class="hidden-xs hidden-sm">Understand the income tax, p
 <div id="ajax-q4-contract-yes" class="hidden wb-frmvld gc-font-2019 alert alert-success">
  <h3><small>Your result </small><br>
              Indicator: Contract is valid</h3>
+<hr>
 <p>Generally, all of the following must apply to be considered a valid contract:</p>
 
 <div data-ajax-replace="#ajax-contract"></div>
@@ -304,9 +310,11 @@ li><a href="after.html" class="hidden-xs hidden-sm">Understand the income tax, p
 </tr> </tbody> </table>
 </div></div>
 <h2 id="h_2">Who decides when a contract is null and void</h2>
+<div id="ajax-contract-null">
 <p>When addressing the issue of statutory illegality, the courts can decide that a contract is null and void from the beginning (void ab initio) if the formation of the contract was prohibited by statute and if, in the court's assessment, it would not be contrary to public policy to declare the contract void ab initio.</p>
-
+</div>
 <h2 id="h_3">Cessation of a contract</h2>
+<div id="ajax-contract-stop">
 <p>Examples of when a contract is terminated:</p>
 
 <ul>
@@ -341,19 +349,19 @@ li><a href="after.html" class="hidden-xs hidden-sm">Understand the income tax, p
 <nav class="mrgn-bttm-lg mrgn-tp-lg">
   <h3 class="wb-inv">Document navigation</h3>
   <ul class="pager">
-    <li class="next"><a href="factors.html" rel="next"><span class="wb-inv">Next: </span>Guidance on the worker classification</a></li>
+    <li class="next"><a href="factors.html" rel="next"><span class="wb-inv">Next: </span>Determine if the worker is an incorporated employee</a></li>
   </ul>
 </nav>
 
-<section id="psb" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">What is considered a personal services business (PSB)</h2>
+<section id="contract-null" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Who decides when a contract is null and void</h2>
 	</header>	<div class="modal-body">		
-	<div data-ajax-replace="#ajax-psb"></div>
+	<div data-ajax-replace="#ajax-contract-null"></div>
 	</div></section>
 
 
-<section id="contract" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Validity of the contract</h2>
+<section id="contract-stop" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Examples of cessation of a contract</h2>
 	</header>	<div class="modal-body">		
-	<div data-ajax-replace="#ajax-contract"></div>
+	<div data-ajax-replace="#ajax-contract-stop"></div>
 	</div></section>
 	 
 
