--- a/payroll/guidance/contract.html
+++ b/payroll/guidance/contract.html
@@ -79,7 +79,7 @@
 <li><a href="factors.html" class="hidden-xs hidden-sm">Determine where the contract was formed</a>
       <a href="factors.html#gc-document-nav" class="visible-xs visible-sm">Determine where the contract was formed</a></li>
 
-li><a href="after.html" class="hidden-xs hidden-sm">Understand the income tax, payroll and GST/HST tax obligations</a>
+<li><a href="after.html" class="hidden-xs hidden-sm">Understand the income tax, payroll and GST/HST tax obligations</a>
       <a href="after.html#gc-document-nav" class="visible-xs visible-sm"> Understand the income tax, payroll and GST/HST tax obligations </a></li>
 
  </ul>
