--- a/payroll/guidance/factors-psb.html
+++ b/payroll/guidance/factors-psb.html
@@ -8,7 +8,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Personal services business - Determine the factors to consider - Canada.ca</title>
+         <title>Determine if the worker is an incorporated employee - Determine the employment status - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -75,27 +75,10 @@
 <li><a href="contract.html" class="hidden-xs hidden-sm">Determine if the contract is valid </a>
       <a href="contract.html#gc-document-nav" class="visible-xs visible-sm">Determine if the contract is valid</a></li>
 
+ <li>	 <a href="factors-psb.html" class="active" aria-current="page">Determine if the worker is an incorporated employee</a></li>
 
-<li><a href="factors.html" class="hidden-xs hidden-sm">Guidance on the worker classification</a>
-      <a href="factors.html#gc-document-nav" class="visible-xs visible-sm">Guidance on the worker classification</a>
-
-
-<ul class="noline">
-  
-  <li><a href="factors-federal.html" class="hidden-xs hidden-sm">Province or territory other than Quebec</a>
-      <a href="factors-federal.html#gc-document-nav" class="visible-xs visible-sm"> Province or territory other than Quebec </a></li>
-  
-  
-<li><a href="factors-quebec.html" class="hidden-xs hidden-sm">Province of Quebec</a>
-      <a href="factors-quebec.html#gc-document-nav" class="visible-xs visible-sm"> Province of Quebec</a></li>
- 
-   <li>	 <a href="factors-psb.html" class="active" aria-current="page">Personal services business</a></li>
-                      
-     
-                            </ul>
-
-
-
+<li><a href="factors.html" class="hidden-xs hidden-sm">Determine where the contract was formed</a>
+      <a href="factors.html#gc-document-nav" class="visible-xs visible-sm">Determine where the contract was formed</a>
 	</li>
 
 <li><a href="after.html" class="hidden-xs hidden-sm">Understand the income tax, payroll and GST/HST tax obligations</a>
@@ -106,7 +89,7 @@
 </nav>
 
 
-<h1 property="name" id="wb-cont" class="gc-thickline">Personal services business</h1>
+<h1 property="name" id="wb-cont" class="gc-thickline">Determine if the worker is an incorporated employee</h1>
  <div id="ajax-classification">
 <div class="alert alert-warning">
 <p>Content has been developed to provide guidance only. The guidance does not replace the law and does not replace a formal request for a ruling. <strong>No changes were made to the existing federal legislative requirement. </strong></p>
@@ -260,35 +243,51 @@
 </div></div>
 
 
-<section id="psb" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">What is considered a personal services business (PSB)</h2>
+<section id="psb_2" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">What is considered a personal services business (PSB)</h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="#ajax-psb"></div>
 	</div></section>
 
 
-<section id="contract" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Validity of the contract</h2>
+<section id="contract1" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Validity of the contract</h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="#ajax-contract"></div>
 	</div></section>
 
-<section id="person" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">What is a person</h2>
+<section id="contract" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">	<header class="modal-header"><h2 class="modal-title">Validity of the contract</h2>
 	</header>	<div class="modal-body">		
-	<div data-ajax-replace="#ajax-person"></div>
+	<div data-ajax-replace="#ajax-contract"></div>
 	</div></section>
 
-<section id="specified" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">What is a specified shareholder</h2>
+<section id="person" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">	<header class="modal-header"><h2 class="modal-title">What is a person</h2>
 	</header>	<div class="modal-body">		
-	<div data-ajax-replace="#ajax-specified"></div>
+	<p>A trust, individual, corporation, partnership or a succession, or a body that is an association, club, commission, union or another organization of any kind.</p>
+
 	</div></section>
 
-<section id="fulltime" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">What is a full time employee</h2>
+<section id="specified" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">	<header class="modal-header"><h2 class="modal-title">What is a specified shareholder</h2>
 	</header>	<div class="modal-body">		
-	<div data-ajax-replace="#ajax-fulltime"></div>
+	<p>A <strong>specified shareholder </strong>of the corporation is an individual who <strong>directly or indirectly owns at least 10% of the issued shares </strong>of any class of a capital stock of the corporation or a related corporation.</p>
+
 	</div></section>
 
-<section id="relatedcorp" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">What is an associated corporation</h2>
+<section id="fulltime" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">	<header class="modal-header"><h2 class="modal-title">What is a full time employee</h2>
 	</header>	<div class="modal-body">		
-	<div data-ajax-replace="#ajax-relatedcorp"></div>
+	<p>An employee who works a full business day on each working day of the year, subject to normal absences due to illness or vacation.</p>
+
+	</div></section>
+
+<section id="relatedcorp" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">	<header class="modal-header"><h2 class="modal-title">What is an associated corporation</h2>
+	</header>	<div class="modal-body">		
+	<p>A corporation is associated with another corporation in a taxation year if, at some point in the year if <strong>one </strong>of the following apply:</p>
+
+<ul class="list-unstyled cnjnctn-type-or">
+<li class="cnjnctn-col">One of the Corporations directly or indirectly controls, in any manner whatsoever, the other corporation </li>
+<li class="cnjnctn-col">The two Corporations are directly or indirectly controlled, in any manner whatsoever, by the same person or same group of persons </li>
+<li class="cnjnctn-col">Each of the Corporations is directly or indirectly controlled, in any manner whatsoever, by a person, and the person that controls one of the Corporations is related to the person that controls the other corporation, and either of the persons owns at least 25% of the issued shares of any class, other than a specified class, of the capital stock of each corporation </li>
+<li class="cnjnctn-col">One of the Corporations is directly or indirectly controlled, in any manner whatsoever, by a person that is related to each member of a group of persons that controls the other corporation, and this person owns at least 25% of the issued shares of any class, other than a specified class, of the capital stock of the other corporation </li>
+<li class="cnjnctn-col">Each of the Corporations is directly or indirectly controlled, in any manner whatsoever, by a related group and each member of one of the related groups is related to all of the members of the other related group, and one person who is a member of both related groups owned alone, or several persons who are members of both related groups owned together, in respect of each corporation, at least 25% of the issued shares of any class, other than a specified class, of the capital stock thereof </li>
+</ul>
 	</div></section>
 	 
 
