--- a/payroll/guidance/contract.html
+++ b/payroll/guidance/contract.html
@@ -147,10 +147,6 @@
 </div>
 <h2>Answer a few questions for guidance on how to determine if a contract is valid</h2>
 <p>Contracts can be formed either orally or in writing. An oral contract is as valid and enforceable as a written contract.</p>
-<p>Learn more: </p>
-<ul class="cnjnctn-type-and cnjnctn-sm">
-	<li class="cnjnctn-col"><a href="#contract-null" aria-controls="contract-null" class="overlay-lnk" role="button">Who decides when a contract is null and void&nbsp;<span class="far fa-question-circle"></span></a> </li>
-   <li class="cnjnctn-col"><a href="#contract-stop" aria-controls="contract-stop" class="overlay-lnk" role="button">Examples of cessation of a contract&nbsp;<span class="far fa-question-circle"></span></a></li></ul>
 
 <p class="text-muted small">Make a selection and <strong> scroll down</strong> for further questions or results</p>
   <div id="interactive">
@@ -247,11 +243,17 @@
  <h3><small>Your result </small><br>
              Indicator: Contract is valid</h3>
 <hr>
-<p>Generally, all of the following must apply to be considered a valid contract:</p>
+<p>Generally, the following applies when the contract is valid:</p>
 
 <div data-ajax-replace="#ajax-contract"></div>
 
-<p>Continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/factors.html">Guidance on the worker classification</a> .</p>
+<p>Learn more: </p>
+<ul>
+	<li><a href="#contract-null" aria-controls="contract-null" class="overlay-lnk" role="button">Who decides when a contract is null and void&nbsp;<span class="far fa-question-circle"></span></a> </li>
+   <li><a href="#contract-stop" aria-controls="contract-stop" class="overlay-lnk" role="button">Examples of cessation of a contract&nbsp;<span class="far fa-question-circle"></span></a></li></ul>
+
+
+<p>Continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/factors.html">Determine if the worker is an incorporated employee</a> .</p>
 </div>
 
 </div></div>
