--- a/payroll/guidance/contract.html
+++ b/payroll/guidance/contract.html
@@ -211,7 +211,8 @@
                 There are no offer and an acceptance of the terms and conditions of the agreement from the parties</h3>
 <hr>
 <h4>Indicator: Contract is not valid</h4>    
- <p>There must be an offer and an acceptance of the terms and conditions of the agreement from the parties to be considered a valid contract. If the contract is not valid, you need to carefully determine the actual relationship when making your determination.</p>       
+ <p>There must be an offer and an acceptance of the terms and conditions of the agreement from the parties to be considered a valid contract.  </p>
+ <p>If the contract is not valid, you need to carefully determine the actual relationship when making your determination.</p>       
             </div>
 
 
@@ -220,7 +221,8 @@
                 The parties involved are not legally capable of entering into a contract</h3>
 <hr>
 <h4>Indicator: Contract is not valid</h4>
-<p>The parties involved must be legally capable of entering into the contract to be considered a valid contract. If the contract is not valid, you need to carefully determine the actual relationship when making your determination.</p>
+<p>The parties involved must be legally capable of entering into the contract to be considered a valid contract. </p>
+ <p>If the contract is not valid, you need to carefully determine the actual relationship when making your determination.</p>       
 </div>
 
 <div id="ajax-q3-contract-no" class="hidden wb-frmvld gc-font-2019 alert alert-warning">
@@ -228,7 +230,8 @@
                 The object of the contract is not legitimate</h3>
 <hr>
 <h4>Indicator: Contract is not valid</h4>
-<p>The object of the contract must be legitimate to be considered a valid contract. If the contract is not valid, you need to carefully determine the actual relationship when making your determination.</p>
+<p>The object of the contract must be legitimate to be considered a valid contract.  </p>
+ <p>If the contract is not valid, you need to carefully determine the actual relationship when making your determination.</p>       
 </div>
 
 <div id="ajax-q4-contract-no" class="hidden wb-frmvld gc-font-2019 alert alert-warning">
@@ -236,7 +239,8 @@
                The agreement is not mutual</h3>
 <hr>
 <h4>Indicator: Contract is not valid</h4>
-<p>The agreement must be mutual (for example, the parties must have the intention to enter into the contract and be bound by its terms) to be considered a valid contract. If the contract is not valid, you need to carefully determine the actual relationship when making your determination.</p>
+<p>The agreement must be mutual (for example, the parties must have the intention to enter into the contract and be bound by its terms) to be considered a valid contract.  </p>
+ <p>If the contract is not valid, you need to carefully determine the actual relationship when making your determination.</p>       
 </div>
 
 <div id="ajax-q4-contract-yes" class="hidden wb-frmvld gc-font-2019 alert alert-success">
