--- a/payroll/guidance/contract.html
+++ b/payroll/guidance/contract.html
@@ -247,7 +247,7 @@
  <h3><small>Your result </small><br>
              Indicator: Contract is valid</h3>
 <hr>
-<p>Generally, the following applies when the contract is valid:</p>
+<p class="mrgn-bttm-md">Generally, the following applies when the contract is valid:</p>
 
 <div data-ajax-replace="#ajax-contract"></div>
 
@@ -257,7 +257,7 @@
    <li><a href="#contract-stop" aria-controls="contract-stop" class="overlay-lnk" role="button">Examples of cessation of a contract&nbsp;<span class="far fa-question-circle"></span></a></li></ul>
 
 
-<p>Continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/factors.html">Determine if the worker is an incorporated employee</a> .</p>
+<p class="mrgn-tp-lg">Continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/factors.html">Determine if the worker is an incorporated employee</a> .</p>
 </div>
 
 </div></div>
@@ -359,13 +359,14 @@
   </ul>
 </nav>
 
-<section id="contract-null" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Who decides when a contract is null and void</h2>
+
+<section id="contract-null" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">	<header class="modal-header"><h2 class="modal-title">Who decides when a contract is null and void</h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="#ajax-contract-null"></div>
 	</div></section>
 
 
-<section id="contract-stop" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Examples of cessation of a contract</h2>
+<section id="contract-stop" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">	<header class="modal-header"><h2 class="modal-title">Examples of cessation of a contract</h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="#ajax-contract-stop"></div>
 	</div></section>
