--- a/payroll/guidance/factors-psb.html
+++ b/payroll/guidance/factors-psb.html
@@ -91,24 +91,30 @@
 
 <h1 property="name" id="wb-cont" class="gc-thickline">Determine if the worker is an incorporated employee</h1>
  <div id="ajax-classification">
-<div class="alert alert-warning">
-<p>Content has been developed to provide guidance only. The guidance does not replace the law and does not replace a formal request for a ruling. <strong>No changes were made to the existing federal legislative requirement. </strong></p>
+<div class="alert alert-info">
+<p>Content has been updated for <strong>clarity, completeness and plain language</strong>, including <strong>additional examples and legislative references</strong>.</p>
 </div>
 
-<p>You need to consider multiple factors to determine if the worker is a personal services business (PSB). </p>
+<p>You need to consider multiple factors to determine if the worker is an incorporated employee. </p>
 
-<h2 class="h3">On this page</h2>
-  <ul>
-	<li><a href="#h_1">Determine if the worker is considered a PSB</a></li>
-	  
-	<li><a href="#h_6">References</a></li>    
-       
-  </ul>
+<h3>You have the choice to read the same information in <strong>2</strong> different formats:</h3>			 
+<ul class="cnjnctn-type-or cnjnctn-sm">
+	<li class="cnjnctn-col"><a href="#tab1">Interactive questions</a> to get specific results, factors and indicators </li>
+	<li class="cnjnctn-col"><a href="#tab2">Read full-text</a> information </li>
+	</ul>
+  <div class="wb-tabs mrgn-tp-lg ignore-session">
+    <div class="tabpanels">
+      <details><summary>Answer interactive questions</summary>
+   
+<div class="alert alert-warning">
+<p id="tab1">Content has been developed to provide guidance only. The guidance does not replace the law and does not replace a formal request for a ruling. <strong>No changes were made to the existing federal legislative requirement. </strong></p>
+</div>
 
-<h2 id="stepa">Determine if the worker is an incorporated employee</h2> 
-<p>Answer a few questions to determine if the worker is an incorporated employee. If the worker is an incorporated employee, special rules may apply to their corporation for income tax purposes. </p>		  
+<h2>Answer a few questions for guidance on how to determine if the worker is an incorporated employee </h2>	
+<p>If the worker is an incorporated employee, special rules may apply to their corporation for income tax purposes.</p>	  
 <p class="text-muted small">Make a selection and <strong> scroll down</strong> for further questions or results</p>
- <div class="wb-frmvld gc-font-2019">  <form>
+<div id="interactive"> 
+<div class="wb-frmvld gc-font-2019">  <form>
  <div class="wb-fieldflow" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "inline":true, "noForm": true, "isoptional": true}'>
 		<p>Does the worker provide their services through another corporation? </p>
 		<ul>
@@ -185,7 +191,7 @@
 </div>
 
 
-</form></div>
+</form></div></div>
 
 	
 
@@ -216,6 +222,18 @@
 <p>Continue to: Determine where the contract was formed</p>
 </div></div></div>
 
+
+</details>
+ <details>
+        <summary>Read full-text</summary>
+
+<h2 id="tab2">On this page</h2>
+  	
+<ul>
+<li><a href="#h_1">XXX</a></li>
+<li><a href="#h_2">XXX</a></li>
+</ul>
+</details></div></div>
 
 <hr>
 <h2 id="h_6">References</h2>
@@ -290,7 +308,7 @@
 </ul>
 	</div></section>
 	 
-
+</div>
 
             <div id="def-preFooter"></div>
             <!-- Write closure template -->
