--- a/payroll/guidance/factors-psb.html
+++ b/payroll/guidance/factors-psb.html
@@ -95,7 +95,7 @@
 <p>Content has been updated for <strong>clarity, completeness and plain language</strong>, including <strong>additional examples and legislative references</strong>.</p>
 </div>
 
-<p>You need to consider multiple factors to determine if the worker is an incorporated employee. </p>
+<p>You need to consider multiple factors to determine if the worker is an incorporated employee. If the worker is an incorporated employee, special rules may apply to their corporation for income tax purposes if an individual performs the services on behalf of their own corporation (personal services business).</p>
 
 <h3>You have the choice to read the same information in <strong>2</strong> different formats:</h3>			 
 <ul class="cnjnctn-type-or cnjnctn-sm">
@@ -111,7 +111,7 @@
 </div>
 
 <h2>Answer a few questions for guidance on how to determine if the worker is an incorporated employee </h2>	
-<p>If the worker is an incorporated employee, special rules may apply to their corporation for income tax purposes.</p>	  
+<p>Add intro paragraph if needed.</p>	  
 <p class="text-muted small">Make a selection and <strong> scroll down</strong> for further questions or results</p>
 <div id="interactive"> 
 <div class="wb-frmvld gc-font-2019">  <form>
@@ -196,31 +196,40 @@
 	
 
   <div id="results" class="mrgn-tp-lg" aria-live="polite">
-<div id="ajax-psb5yes" class="hidden mrgn-tp-lg">
-<div class="mrgn-tp-lg alert alert-warning">
-<p>Indicator:  The worker is a PSB. PSB’s have different tax obligations.</p>
-<p>Continue to: Understand the income tax, payroll and GST/HST tax obligations</p>
-</div></div>
 
-<div id="ajax-psb5not" class="hidden mrgn-tp-lg">
-<div class="mrgn-tp-lg alert alert-warning">
-<p>Result: You are not sure if the worker is a PSB or not</p>
+<div id="ajax-psb5yes" class="hidden wb-frmvld gc-font-2019 alert alert-info">
+ <h3><small>Your result </small><br>
+               Indicator: The worker is a PSB</h3>
+<hr>
+
+<p>PSB’s have different tax obligations.</p>
+<p>Continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/after.html">Understand the income tax, payroll and GST/HST tax obligations</a></p>
 </div>
-<hr>	
-<h2>Determine if the worker is considered an employee</h2>
+
+<div id="ajax-psb5not" class="hidden wb-frmvld gc-font-2019 alert alert-info">
+ <h3><small>Your result </small><br>
+               You are not sure if the worker is a PSB or not</h3>
+<hr>
+	
+<h4>Determine if the worker is considered an employee</h4>
 <p>To determine if the worker is considered an employee, <strong>select "no" to this question to continue</strong>.</p>
-<h3>Explanation</h3>
+<h5>More information</h5>
 <p>A corporation is a PSB if the incorporated employee that provides services to the person on behalf of the corporation <strong>could reasonably be considered an employee of that person if the corporation did not exist</strong>.</p>
 <p>An <strong>employee-employer relationship </strong>between the incorporated employee and the person that received the services must be shown. Both are therefore bound by a contract of employment instead of a contract of enterprise. </p>
 <p>The <strong>factors </strong>used to determine whether an <strong>employee-employer relationship exists</strong> are the same factors used to determine a worker's status as an employee or self-employed worker. </p>
 <p>If you determine that the <strong>worker is considered an employee, the worker is also considered a PSB.</strong></p>
 </div>
 
-<div id="ajax-psb1no" class="hidden mrgn-tp-lg">
-<div class="mrgn-tp-lg alert alert-info">
-<p>Indicator: The worker is not a PSB. </p>
-<p>Continue to: Determine where the contract was formed</p>
-</div></div></div>
+<div id="ajax-psb1no" class="hidden wb-frmvld gc-font-2019 alert alert-info">
+ <h3><small>Your result </small><br>
+               Indicator: The worker is not a PSB</h3>
+<hr>
+<p>Add all conditions here based on full-text</p>
+<p>Continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/factors.html">Determine where the contract was formed</a></p>
+</div>
+
+
+</div>
 
 
 </details>
