--- a/payroll/guidance/factors-psb.html
+++ b/payroll/guidance/factors-psb.html
@@ -235,13 +235,8 @@
 </details>
  <details>
         <summary>Read full-text</summary>
+  <div data-ajax-replace="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-income-tax-return/tax-implications-personal-services-business.html"></div>
 
-<h2 id="tab2">On this page</h2>
-  	
-<ul>
-<li><a href="#h_1">XXX</a></li>
-<li><a href="#h_2">XXX</a></li>
-</ul>
 </details></div></div>
 
 <hr>
