--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -873,11 +873,13 @@ html:lang(fr) .cnjnctn-or:before {
                   </li>
                   <li>A foreign national or temporary resident of Canada
                     <div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true, "default": {"action": "addClass", "source": "#excluded-owner, #affected-owner, #affected-owner-corp, #unsure-owner, #exemption-yes, #exemption-no", "class": "hidden", "live": true}}'>
-                      <p>Do you own the residential property as a trustee of a mutual fund trust, real estate investment trust, or specified investment flow-through (SIFT) trust for Canadian income tax purposes?</p>
+                      <p>For Canadian income tax purposes, do you own the residential property as a trustee of any of the following?</p>
                       <ul>
-                        <li data-wb-fieldflow='{"action": "removeClass", "source": "#excluded-owner", "class": "hidden", "live": true}'>Yes</li>
-                        <li data-wb-fieldflow='{"action": "append", "source": "#affected-owner"}'>No</li>
-                        <li data-wb-fieldflow='{"action": "removeClass", "source": "#unsure-owner", "class": "hidden", "live": true}'>Unsure (none of the above)</li>
+                        <li data-wb-fieldflow='{"action": "removeClass", "source": "#excluded-owner", "class": "hidden", "live": true}'>Mutual fund trust</li>
+		        <li data-wb-fieldflow='{"action": "removeClass", "source": "#excluded-owner", "class": "hidden", "live": true}'>Real estate investment trust</li>
+			<li data-wb-fieldflow='{"action": "removeClass", "source": "#excluded-owner", "class": "hidden", "live": true}'>Specified investment flow-through (SIFT) trust</li>
+                        <li data-wb-fieldflow='{"action": "append", "source": "#affected-owner"}'>None of the above</li>
+                        <li data-wb-fieldflow='{"action": "removeClass", "source": "#unsure-owner", "class": "hidden", "live": true}'>I don't know</li>
                       </ul>
                     </div>
                   </li>
