--- a/payroll/guidance/factors.html
+++ b/payroll/guidance/factors.html
@@ -103,50 +103,28 @@
 
 <h1 property="name" id="wb-cont" class="gc-thickline">Determine where the contract was formed</h1>
  
-<div class="alert alert-warning">
-<p>Content has been developed to provide guidance only. The guidance does not replace the law and does not replace a formal request for a ruling. <strong>No changes were made to the existing federal legislative requirement. </strong></p>
+<div class="alert alert-info">
+<p>Content has been updated for <strong>clarity, completeness and plain language</strong>, including <strong>additional examples and legislative references</strong>.</p>
 </div>
 
-<p>This guidance gives you the CRA's general view of a worker's employment status based on common situations. It can also be used to help you understand if changes to the terms of the contract or working arrangements changes a worker's employment status.</p>
+<p>You need to consider multiple factors to determine if the worker is an employee or is self-employed. The factors are different if the contract is formed in a province or territory other than Quebec or in the province of Quebec (unless the contract states differently). </p>
 
-<h2 class="h3">On this page</h2>
-  	
-<ul>
-<li><a href="#h_2">Type of information you need to use the guidance</a></li>
-<li><a href="#h_3">Determine where the contract was formed</a></li>
-</ul>
-
-
-<h2 id="h_2">Type of information you need to use the guidance</h2>
-<p>To use the guidance, the following are examples of information you need to know:</p>
-
- <ul class="fa-ul">
-<li><span class="fas fa-check fa-li fa-lg text-success"> </span> Details of the contract </li>
-<li><span class="fas fa-check fa-li fa-lg text-success"> </span> The worker's responsibilities </li>
-<li><span class="fas fa-check fa-li fa-lg text-success"> </span> Who decides what work needs to be done </li>
-<li><span class="fas fa-check fa-li fa-lg text-success"> </span> Who decides when, where and how the work is done </li>
-<li><span class="fas fa-check fa-li fa-lg text-success"> </span> How the worker will be paid </li>
-<li><span class="fas fa-check fa-li fa-lg text-success"> </span> If the engagement includes any corporate benefits or reimbursement for expenses </li>
-</ul>
-
-<h2 id="h_3">Determine where the contract was formed</h2>
-
-<p>The factors are different if the contract is formed in the province of Quebec or in any other province or territory (unless the contract states differently). If the contract is formed:</p>
+<p> If the contract is formed:</p>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li>
+<li class="cnjnctn-col">
 <ul>
 <li>In a province other than Quebec or in a territory</li>
 <li>Outside Canada and the employment is performed in a province other than Quebec, in a territory, or in another country</li>
-<p>Continue to: <a href="/cra-arc/payroll/guidance/factors-federal.html">Province or territory other than Quebec</a></p>
 </ul>
+<p>Continue to: <a href="/cra-arc/payroll/guidance/factors-federal.html">Contract formed in a province or territory other than Quebec</a></p>
 </li>
 <li class="cnjnctn-col">
 <ul>
 <li>In the province of Quebec</li>
 <li>Outside Canada and the employment is performed in Quebec</li>
-<p>Continue to: <a href="/cra-arc/payroll/guidance/factors-quebec.html">Province of Quebec</a></p>
 </ul>
+<p>Continue to: <a href="/cra-arc/payroll/guidance/factors-quebec.html">Contract formed in the province of Quebec</a></p>
 </li>
 </ul>
 
