--- a/payroll/guidance/factors.html
+++ b/payroll/guidance/factors.html
@@ -113,16 +113,16 @@
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col">
-<ul>
-<li>In a province other than Quebec or in a territory</li>
-<li>Outside Canada and the employment is performed in a province other than Quebec, in a territory, or in another country</li>
+<ul class="list-unstyled cnjnctn-type-or">
+<li class="cnjnctn-col">In a province other than Quebec or in a territory</li>
+<li class="cnjnctn-col">Outside Canada and the employment is performed in a province other than Quebec, in a territory, or in another country</li>
 </ul>
 <p>Continue to: <a href="/cra-arc/payroll/guidance/factors-federal.html">Contract formed in a province or territory other than Quebec</a></p>
 </li>
 <li class="cnjnctn-col">
-<ul>
-<li>In the province of Quebec</li>
-<li>Outside Canada and the employment is performed in Quebec</li>
+<ul class="list-unstyled cnjnctn-type-or">
+<li class="cnjnctn-col">In the province of Quebec</li>
+<li class="cnjnctn-col">Outside Canada and the employment is performed in Quebec</li>
 </ul>
 <p>Continue to: <a href="/cra-arc/payroll/guidance/factors-quebec.html">Contract formed in the province of Quebec</a></p>
 </li>
