--- a/payroll/guidance/after.html
+++ b/payroll/guidance/after.html
@@ -90,8 +90,8 @@
 
 <h1 property="name" id="wb-cont" class="gc-thickline">Understand the income tax, payroll and GST/HST tax obligations</h1>
  <div id="ajax-classification">
-<div class="alert alert-warning">
-<p>Content has been developed to provide guidance only. The guidance does not replace the law and does not replace a formal request for a ruling. <strong>No changes were made to the existing federal legislative requirement. </strong></p>
+<div class="alert alert-info">
+<p>Content has been updated for <strong>clarity, completeness and plain language</strong>, including <strong>additional examples and legislative references</strong>.</p>
 </div>
 
 <h2 class="h3">On this page</h2>
@@ -208,14 +208,25 @@
 <li><a href="https://www.canada.ca/en/revenue-agency/programs/about-canada-revenue-agency-cra/compliance/combat-tax-crimes.html">Tax evasion, understanding the consequences</a></li>
 </ul>
 
-<h3 id="h_6_2">Legislation</h3>
+<h3 id="h_6_2_2">Legislation</h3>
 <div class="row">
 <div class="col-xs-12">
 <dl class="dl-horizontal">
-
-<dt><a href="">ITA: </a> </dt> <dd>description</dd>
-<dt><a href="">CPP: </a> </dt> <dd>description </dd>
-<dt><a href="">EIA: </a> </dt> <dd>description </dd>
+<dt><a href="https://decisions.scc-csc.ca/scc-csc/scc-csc/en/item/1898/index.do">SCC: 27820</a> </dt> <dd>671122 Ontario Ltd. v. Sagaz Industries Canada Inc., 2001 SCC 59</dd>
+<dt><a href="https://decisions.fca-caf.gc.ca/fca-caf/decisions/en/item/33684/index.do">FCA: A-443-04</a> </dt> <dd>Royal Winnipeg Ballet v. Canada (Minister of National Revenue), 2006 FCA 87</dd>
+<dt><a href="https://decisions.fca-caf.gc.ca/fca-caf/decisions/en/item/31688/index.do">FCA: A-563-00</a> </dt> <dd>Lawrence Wolf v. M.N.R, 2002 FCA 96</dd>
+<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/c-5/#wb-cont">CEA 2</a> </dt> <dd>Canada Evidence Act, R.S., 1985, c. C-5</dd>
+<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/l-2/#wb-cont">CLC 4</a> </dt> <dd>Canada Labour Code</dd>
+<dt><a href="https://www.legisquebec.gouv.qc.ca/en/document/cs/ccq-1991">CCQ 2085 and 2098</a> </dt> <dd>Civil Code of Quebec, S.Q. 1991, c. 64 </dd>
+<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/e-5.6/#wb-cont">EIA</a> </dt> <dd>Employment Insurance Act, S.C. 1996, c. 23 </dd>
+<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/f-7.5/index.html#wb-cont">Harmonization of laws</a> </dt> <dd>Federal Law — Civil Law Harmonization Act, No. 1, S.C. 2001, ch. 4</dd>
+<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/i-21/index.html#wb-cont">IA 8.1</a> </dt> <dd>Interpretation Act, R.S.C. (1985), ch. I-21 (enacted by S.C. 2001, ch. 4)</dd>
+<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/t-2/index.html#wb-cont">TCCA 12(1)</a> </dt> <dd>Tax Court of Canada Act, R.S., 1985, c.T-2</dd>
+<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/i-3.3/page-1.html#h-279779">ITA: 5(1)</a> </dt> <dd>Income from an office or employment </dd>
+<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/i-3.3/page-99.html#h-1386438">ITA: 125(7)</a> </dt> <dd>Definition of a personal services business </dd>
+<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/i-3.3/page-205.html#h-317484">ITA: 248(1)</a> </dt> <dd>Definition of a specified shareholder</dd>
+<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/c-8/index.html#wb-cont">CPP: 2(1)</a> </dt> <dd>Definition of employment </dd>
+<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/e-5.6/#wb-cont">EIA: 2(1)</a> </dt> <dd>Definition of employment</dd>
 </dl>
 	
 </div>
