--- a/payroll/guidance/factors.html
+++ b/payroll/guidance/factors.html
@@ -111,7 +111,7 @@
 
 <p> If the contract is formed:</p>
 
-<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col">
 <ul class="list-unstyled cnjnctn-type-or">
 <li class="cnjnctn-col">In a province other than Quebec or in a territory</li>
