--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -8,7 +8,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Province or territory other than Quebec - Determine the factors to consider - Canada.ca</title>
+         <title>Contract formed in a province or territory other than Quebec - Determine the employment status - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -76,19 +76,18 @@
       <a href="contract.html#gc-document-nav" class="visible-xs visible-sm">Determine if the contract is valid</a></li>
 
 
-<li><a href="factors.html" class="hidden-xs hidden-sm">Guidance on the worker classification</a>
-      <a href="factors.html#gc-document-nav" class="visible-xs visible-sm">Guidance on the worker classification</a>
+<li><a href="factors.html" class="hidden-xs hidden-sm">Determine where the contract was formed</a>
+      <a href="factors.html#gc-document-nav" class="visible-xs visible-sm">Determine where the contract was formed</a>
 
 
 <ul class="noline">
 
-  <li>	 <a href="factors-federal.html" class="active" aria-current="page">Province or territory other than Quebec</a></li>
+  <li>	 <a href="factors-federal.html" class="active" aria-current="page">Contract formed in a province or territory other than Quebec</a></li>
   
-<li><a href="factors-quebec.html" class="hidden-xs hidden-sm">Province of Quebec</a>
-      <a href="factors-quebec.html#gc-document-nav" class="visible-xs visible-sm"> Province of Quebec</a></li>
+<li><a href="factors-quebec.html" class="hidden-xs hidden-sm">Contract formed in the province of Quebec</a>
+      <a href="factors-quebec.html#gc-document-nav" class="visible-xs visible-sm">Contract formed in the province of Quebec</a></li>
   
-    <li><a href="factors-psb.html" class="hidden-xs hidden-sm">Personal services business (PSB)</a>
-      <a href="factors-psb.html#gc-document-nav" class="visible-xs visible-sm"> Personal services business (PSB)</a></li>                  
+        
      
                             </ul>
 
@@ -99,15 +98,13 @@
 <li><a href="after.html" class="hidden-xs hidden-sm">Understand the income tax, payroll and GST/HST tax obligations</a>
       <a href="after.html#gc-document-nav" class="visible-xs visible-sm"> Understand the income tax, payroll and GST/HST tax obligations </a></li>
 
-<li><a href="status-full-text.html" class="hidden-xs hidden-sm">Full-text guide - RC4110 Employee or self-employed?</a>
-      <a href="status-full-text.html#gc-document-nav" class="visible-xs visible-sm">Full-text guide - RC4110 Employee or self-employed?</a></li>
 
 </ul>
  
 </nav>
 
 
-<h1 property="name" id="wb-cont" class="gc-thickline">Province or territory other than Quebec</h1>
+<h1 property="name" id="wb-cont" class="gc-thickline">Contract formed in a province or territory other than Quebec</h1>
 <div class="alert alert-warning">
 <p>Content has been developed to provide guidance only. The guidance does not replace the law and does not replace a formal request for a ruling. <strong>No changes were made to the existing federal legislative requirement. </strong></p>
 </div>
